--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "ndb": "^1.1.5",
     "slugify": "^1.6.5",
     "validator": "^13.7.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.28.0"
   }
 }
